--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+arch: arm64           # LXD container based build for OSS only
+os: linux             # required for arch different than amd64
+dist: focal           # or bionic | xenial with xenial as default
+
 # Linguagem Utilizada para Desenvolver a Aplicação
 language: python
 
